--- a/requirements.txt
+++ b/requirements.txt
@@ -6,25 +6,28 @@ pandas>=2.0.0
 numpy>=1.24.0
 
 # Optional performance improvements
-pyarrow>=12.0.0  # For faster CSV reading
+pyarrow>=12.0.0
 
-# Data visualization (for future weeks)
+# Data visualization
 matplotlib>=3.7.0
 seaborn>=0.12.0
 
-# Statistical analysis (for future weeks)
+# Statistical analysis
 scipy>=1.10.0
 statsmodels>=0.14.0
 scikit-learn>=1.3.0
 
-# API access (for data acquisition)
+# API access
 requests>=2.31.0
 
-# Jupyter notebooks (for exploratory analysis)
+# Workflow automation
+snakemake>=7.32.0
+
+# Jupyter notebooks (optional)
 jupyter>=1.0.0
 ipykernel>=6.25.0
 
-# Code quality
+# Code quality (optional)
 black>=23.0.0
 flake8>=6.0.0
 
